<resources>
    <string name="app_name">Geopaparazzi</string>
    <string name="action_settings">Settings</string>
    <string name="action_advanced_settings">Advanced</string>
    <string name="label_green">green</string>
    <string name="label_blue">blue</string>
    <string name="label_alpha">alpha</string>
    <string name="label_red">red</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="app_file_name">Geopaparazzi Project Database</string>
    <string name="notesvisibilityToggle">Toggle notes visibility.</string>
    <string name="datasaved">Data successfully exported to: </string>
    <string name="data_nonsaved">An error occurred during the data export!</string>
    <string name="loggingoff">Stopped all sensors.</string>
    <string name="nogps_data">No gps data available yet!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="utctime">time: </string>
    <string name="altim">altim: </string>
    <string name="lat">lat: </string>
    <string name="lon">lon: </string>
    <string name="azimuth">azimuth: </string>
    <string name="go_to">Go to</string>
    <string name="goto_coordinate">go to coordinate</string>
    <string name="geocoding">geocoding</string>
    <string name="prompt_gpsenable">Your gps is disabled! Would you like to enable it?</string>
    <string name="width_label">width</string>
    <string name="color_label">color</string>
    <string name="mainmenu_kmlexport">export</string>
    <string name="mainmenu_import">import</string>
    <string name="mainmenu_gpsdataselect">Gps data list</string>
    <string name="mainmenu_preferences">Settings</string>
    <string name="mainmenu_merge">merge selected logs</string>
    <string name="gpslogproperty">Properties for: </string>
    <string name="gpslog_name">Log name</string>
    <string name="gpslog_chart">Chart</string>
    <string name="gpslog_zoom">zoom to</string>
    <string name="gpslog_delete">Delete</string>
    <string name="mapproperty">Properties for: </string>
    <string name="map_zoom">Zoom to the map</string>
    <string name="map_delete">Delete the map</string>
    <string name="gps_preferences">Gps settings</string>
    <string name="gps_preferences_summary">Set GPS preferences as logging distance or interval.</string>
    <string name="gps_logging_distance">Min gps logging distance</string>
    <string name="gps_logging_interval">Min gps logging interval</string>
    <string name="gps_use_android_level">Use at android level (saves battery, needs restart)</string>
    <string name="gps_use_android_level_summary">If checked, the gps settings are applied at operating system level, which can save battery, but might have a less stable signal when choosing large intervals (if you have gps connection problems on check devices, leave this unchecked). Note that the gps os powered continuously for send intervals less than 100 seconds. For better battery life choose larger intervals.</string>
    <string name="sms_preferences">Sms settings</string>
    <string name="sms_preferences_summary">Set the panic number.</string>
    <string name="databaseError">An error occurred while connecting to the database</string>
    <string name="chart_profile_view">Profile View</string>
    <string name="gpx_import_processing">Importing gpx…</string>
    <string name="osm_additionalinfo">Add info to tag</string>
    <string name="osm_tagsgrid">Choose a tag to insert</string>
    <string name="text_show_position_on_map">map view</string>
    <string name="text_take_a_gps_note">take note</string>
    <string name="text_undo_a_gps_note">undo note</string>
    <string name="gps_log">gps log</string>
    <string name="gps_log_name">Insert a gps log name or accept the default one</string>
    <string name="audio_recording">Recording audio… push here to stop</string>
    <string name="audio_recording_stop">stop</string>
    <string name="panic">panic!</string>
    <string name="panic_number">Panic number</string>
    <string name="panic_number_notset">No valid panic number seems to be available. Did you enable it in the settings?</string>
    <string name="panic_upper">  PANIC!  </string>
    <string name="send_status_update">or just send your position</string>
    <string name="help_needed">Help needed!</string>
    <string name="message_sent">Message sent</string>
    <string name="last_note_deleted">Deleted last note</string>
    <string name="last_note_not_deleted">Couldn\'t delete last note</string>
    <string name="text_logging">logging</string>
    <string name="text_gpson">gps on</string>
    <string name="debug">Debug settings</string>
    <string name="enable_debug">Enable debug log</string>
    <string name="gpslogging_only">This function is available only when the gps is active and a signal is available.</string>
    <string name="remove_last_note_prompt">Do you really want to remove the last text note? This can\'t be undone.</string>
    <string name="reset">Create new project</string>
    <string name="load">Load existing project</string>
    <string name="phonenumber_hint">Enter comma separated phone numbers…</string>
    <string name="pick_phonenumber_label">…</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="delete_visible_notes_title">DELETE NOTES</string>
    <string name="delete_visible_notes_prompt">Do you really want to remove all visible notes? This can\'t be undone.</string>
    <string name="delete_visible_bookmarks_title">DELETE BOOKMARKS</string>
    <string name="delete_visible_bookmarks_prompt">Do you really want to remove all visible bookmarks? This can\'t be undone.</string>
    <string name="gps_searching_fix">Gps is trying to acquire fix.</string>
    <string name="bookmarks_list_rename">Rename the bookmark</string>
    <string name="mapsactivity_menu_toggle_scalebar">Toggle scalebar</string>
    <string name="mapsactivity_menu_tilesource">Select tile source</string>
    <string name="mapsactivity_delete_bookmarks">Deleting {0} bookmarks…</string>
    <string name="mapsactivity_delete_notes">Deleting {0} notes…</string>
    <string name="mapsactivity_new_bookmark">New bookmark</string>
    <string name="mapsactivity_enter_bookmark_name">Enter a name for the new bookmark (optional)</string>
    <string name="maptagsactivity_error_reading_tags">Error in reading tags</string>
    <string name="mapsactivity_menu_toggle_compass">Open compass</string>
    <string name="imagesvisibilityToggle">Toggle images visibility</string>
    <string name="imagefromgps">map center image</string>
    <string name="notefromgps">map center note</string>
    <string name="quicknotes">MAP CENTER NOTES</string>
    <string name="formnotes">FORM BASED NOTES</string>
    <string name="an_error_occurred_while_creating_the_chart_">An error occurred while creating the chart.</string>
    <string name="osm_preferences">OpenStreetMap settings</string>
    <string name="osm_do_it">Enable OSM tools</string>
    <string name="osm_user_label">Username</string>
    <string name="osm_password_label">Password</string>
    <string name="osm_server_label">Server to connect to</string>
    <string name="osm_notes_properly_uploaded">OSM notes properly uploaded.\n\nDo you want to remove the uploaded notes from the device?</string>
    <string name="an_error_occurred_while_uploading_osm_tags">An error occurred while uploading OSM tags: </string>
    <string name="enable_automatic_center_on_gps">Automatic center on GPS</string>
    <string name="enable_center_on_gps">Enable center on GPS</string>
    <string name="disable_center_on_gps">Disable center on GPS</string>
    <string name="profile">profile</string>
    <string name="loading_data">Loading data…</string>
    <string name="profilelable_distance">distance [m]</string>
    <string name="profilelable_elevation">elevation [m]</string>
    <string name="error_json_osm">The send json form is not valid. Please check your icons and form data.</string>
    <string name="available_only_with_network">This function is available only with an active network connection.</string>
    <string name="error_osm_server">An error occurred while connecting to the OSM server. Please check your login and password. It is also possible that the OSM server is not available.</string>
    <string name="check_valid_field">Please check that the field \"{0}\" is valid.</string>
    <string name="view_in_mixare">View in mixare</string>
    <string name="gps_use_coarse">Use network based position instead of gps (needs restart)</string>
    <string name="type_to_filter">type to filter</string>
    <string name="geopapcloud_preferences">Cloud server settings</string>
    <string name="geopapcloud_preferences_summary">Set server credentials and settings for Cloud Services.</string>
    <string name="geopapcloud_user_label">Username</string>
    <string name="geopapcloud_password_label">Password</string>
    <string name="geopapcloud_server_label">Cloud Project server</string>
    <string name="cloud_profile_url_label">Cloud Profiles URL</string>
    <string name="exporting_data">Exporting data</string>
    <string name="map_textsize_factor">Map textsize factor</string>
    <string name="map_textsize_factor_summary">Textsize factor for mapsforge map files.</string>
    <string name="keep_screen_on">Keep the screen on</string>
    <string name="keep_screen_on_summary">Keeps the screen on when on dashboard and map view.</string>
    <string name="select_database_query">Select database query</string>
    <string name="launch_query">Launch query</string>
    <string name="size">Size</string>
    <string name="notes_properties">Notes Properties</string>
    <string name="screen_preferences">Screen settings</string>
    <string name="screen_preferences_summary">Set the screen preferences as the center cross or the screen density.</string>
    <string name="cross_properties_summary">Properties of the cross used to place notes.</string>
    <string name="cross_properties">Center Cross</string>
    <string name="color">Color</string>
    <string name="keep_use_imperial">Use imperial units</string>
    <string name="keep_use_imperial_sum">Uses imperial units instead of metric where possible.</string>
    <string name="high_density_display">High density display</string>
    <string name="high_density_display_sum">If on, online osm maptiles are scaled for better readability.</string>
    <string name="gps_status">GPS Status</string>
    <string name="spatialite_preferences">Spatialite settings</string>
    <string name="spatialite_preferences_summary">Set advanced spatialite configurations.</string>
    <string name="spatialite_recovery_mode">Spatialite Recovery Mode</string>
    <string name="spatialite_recover_mode_tooltip">If on, on next startup an attempt will be made to correct faulty tables.</string>
    <string name="save">save</string>
    <string name="goto_feature">go to</string>
    <string name="force_locale_title">Force locale</string>
    <string name="force_locale_summary">Forces the selected locale regardless of Android\'s current locale.</string>
    <string name="dashboard_note_action_description">Add a text, picture or sketch note</string>
    <string name="dashboard_metadata_action_description">View the project information</string>
    <string name="dashboard_gpslog_action_description">Toggle gps logging</string>
    <string name="dashboard_mapview_action_description">Open the map view</string>
    <string name="dashboard_import_action_description">Open the import view</string>
    <string name="dashboard_export_action_description">Open the export view</string>
    <string name="launch_custom_query">Launch custom query</string>
    <string name="write_own_query">or write your own query</string>
    <string name="profiles_menu_entry">Profiles</string>
    <string name="browse_images">Browse images</string>
</resources>