<!--
  ~ Geopaparazzi - Digital field mapping on Android based devices
  ~ Copyright (C) 2016  HydroloGIS (www.hydrologis.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.ProjectMetadataActivity">

    <item
        android:id="@+id/action_goto"
        android:icon="@drawable/ic_goto_24dp"
        android:orderInCategory="10"
        android:title="@string/goto_feature"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_image_browser"
        android:icon="@drawable/ic_camera_24dp"
        android:orderInCategory="10"
        android:title="@string/browse_images"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_24dp"
        android:orderInCategory="11"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>
