<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GeopaparazziActivityFragment"
    tools:showIn="@layout/activity_geopaparazzi">

    <TableLayout
        android:id="@+id/dashboardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/dashboardButtonNotes"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_note_action_description"
                android:src="@drawable/dashboard_notes" />

            <ImageButton
                android:id="@+id/dashboardButtonMetadata"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_metadata_action_description"
                android:src="@drawable/dashboard_metadata"
                android:textColor="@color/main_text_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/dashboardButtonGpslog"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_gpslog_action_description"
                android:src="@drawable/dashboard_gpslog" />

            <ImageButton
                android:id="@+id/dashboardButtonMapview"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_mapview_action_description"
                android:src="@drawable/dashboard_mapview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/dashboardButtonImport"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_import_action_description"
                android:src="@drawable/dashboard_import" />

            <ImageButton
                android:id="@+id/dashboardButtonExport"
                style="@style/GeopapTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashboard_export_action_description"
                android:src="@drawable/dashboard_export" />
        </TableRow>

    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/panicActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_panic_24dp"/>
</FrameLayout>