<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/colorDialogGridLayout"
    android:columnCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alpha"
        android:id="@+id/alphaTextView"
        android:layout_gravity="center_vertical|right"
        android:layout_column="0"
        android:layout_row="0"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_red"
        android:id="@+id/redTextView"
        android:layout_gravity="center_vertical|right"
        android:layout_column="0"
        android:layout_row="1"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_green"
        android:id="@+id/greenTextView"
        android:layout_gravity="center_vertical|right"
        android:layout_column="0"
        android:layout_row="2"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blue"
        android:id="@+id/blueTextView"
        android:layout_gravity="center_vertical|right"
        android:layout_column="0"
        android:layout_row="3"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/colorView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>
</GridLayout>