<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.SqlViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GeopapTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/GeopapTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/main_background">

            <TextView
                android:id="@+id/sqlTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:text="@string/select_database_query"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/sqlQuerySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sqlTitleView"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/sqlLaunchButton"
                style="@style/GPMediumButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sqlQuerySpinner"
                android:onClick="launchQuery"
                android:text="@string/launch_query" />

            <TextView
                android:id="@+id/ownQueryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/write_own_query"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ownQueryEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ownQueryText"
                android:layout_margin="15dp"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="3">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/ownQueryButton"
                style="@style/GPMediumButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ownQueryEditText"
                android:onClick="launchOwnQuery"
                android:text="@string/launch_custom_query" />

        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>